# hellersanches

./: C# Exam Applications.rar  C# semester assignament.rar  DB Assignament SQL Querys.rar  Database Design and Development Exam.rar  Exam.rar  Final.sln  Procfile  README.md  convert_to_utf8.py  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
2. Guess the Number/: 2. Guess the Number.csproj  Program.cs
2. Guess the Number/Properties/: AssemblyInfo.cs
3. Array and Method/: 3. Array and Method.csproj  Program.cs
3. Array and Method/Properties/: AssemblyInfo.cs
3.2 Age Method/: 3.2 Age Method.csproj  Program.cs
3.2 Age Method/Properties/: AssemblyInfo.cs
Final/: 1. Miles-per Gallon.csproj  Program.cs
Final/Properties/: AssemblyInfo.cs
cadastro_clientes/: Procfile  asgi.py  settings.py  urls.py  wsgi.py
cadastro_clientes/clientes/: apps.py  forms.py  models.py  views.py
cadastro_clientes/clientes/migrations/: 0001_initial.py
cadastro_clientes/clientes/templates/clientes/: cadastro.html  listar_clientes.html  sucesso.html
core/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/template/: guest_list.html
hostel/: README.md  asgi.py  settings.py  urls.py  wsgi.py
