[tool.poetry]
name = "hostel"
version = "0.1.0"
description = "Sistema de gerenciamento de hostel"
authors = ["Heller Sanches <hellersanches@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
dj-database-url = "^2.1.0"
whitenoise = "^6.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"