[tool.poetry]
name = "hostel"
version = "0.1.0"
description = "Sistema de gerenciamento de hostel"
authors = ["Heller Sanches <hellersanches@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
dj-database-url = "^2.1.0"
whitenoise = "^6.6.0"
djangorestframework = "^3.15"  # ou a versão mais recente
psycopg2 = "^2.9"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
